<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".CalculateScreen">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="170sp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="65sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/square"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="@dimen/thisis36sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>




    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300sp"
        android:layout_height="35sp"
        android:entries="@array/Apartment"
        android:background="@drawable/border"
        android:text="@string/_1_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271"
        tools:ignore="MissingConstraints">

    </Spinner>

    <EditText
        android:id="@+id/number"
        android:layout_width="236dp"
        android:layout_height="39dp"
        android:background="@drawable/text"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351"
        tools:ignore="MissingConstraints">

    </EditText>

    <Button
        android:id="@+id/enter"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:background="@drawable/button"
        android:onClick="onResultScreen"
        android:text="@string/result"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/result"
        android:layout_width="175sp"
        android:layout_height="30sp"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604"
        tools:ignore="MissingConstraints">

    </TextView>

    <ImageView
        android:layout_width="68dp"
        android:layout_height="67dp"
        app:srcCompat="@drawable/strel"
        android:onClick="onFlatScreen"
        tools:ignore="MissingConstraints"
        android:contentDescription="TODO">

    </ImageView>
    <TextView
        android:id="@+id/text"
        android:layout_width="175sp"
        android:layout_height="30sp"
        android:text="@string/vendetta"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        tools:ignore="MissingConstraints">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="110sp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:orientation="horizontal">
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>