<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".FlatBank">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="170sp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="65sp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50sp"
                android:layout_height="match_parent"
                android:layout_marginRight="10sp"
                app:srcCompat="@drawable/icon">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Регистрация"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="@dimen/thisis36sp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="256dp"
        android:layout_height="22dp"
        android:text="@string/textreg"
        android:textColor="@color/black"
        android:textSize="@dimen/thisis14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:backgroundTint="@color/black"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/thisis14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="@dimen/thisis14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/enter"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:onClick="onCalculaterScreen"

        android:text="@string/enter"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="406dp"
        android:layout_height="98dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>